--- a/project/portfolios.html
+++ b/project/portfolios.html
@@ -67,8 +67,10 @@
                 <option value="Whitewater rafting site (WDD130)">Portfolio 6</option>
             </select>
             <button id="portfolio-btn">Select</button>
+
         </div>
 
+        <div id="results"></div>
         <!-- Create dynamic text content here -->
         <div class="image-loader"></div>
 
@@ -77,10 +79,11 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 1-->
-                        <h3 class="project-title">Portfolio 1: Place page
+                        <h3 class="project-title">Portfolio 1: Place page </h3>
+
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd131/place.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/place.html">
                             <img
                                 src="images/project-images/portfolio-1.webp"
                                 alt="Portfolio 1: place.html"
@@ -94,15 +97,15 @@
                             This website portfolio uses picture and srcset in order to load different picture sizes. The site is about my dream destination, Banaue Rice Terraces in the Philippines!
                         </p>
                     </div>
-                </h3>
+
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 2-->
-                        <h3 class="project-title">Portfolio 2: WDD131 home page
+                        <h3 class="project-title">Portfolio 2: WDD131 home page </h3>
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd131/index.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/index.html">
                             <img
                                 src="images/project-images/portfolio-2.webp"
                                 alt="Portfolio 2: index.html"
@@ -116,15 +119,15 @@
                             This is a simple HTML personal homepage I've created for my course Dynamic Web Fundamentals (WDD131) in BYU-Idaho Spring Semester 2024.
                         </p>
                     </div>
-                </h3>
+
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 3-->
-                        <h3 class="project-title">Portfolio 3: Filtered temples page
+                        <h3 class="project-title">Portfolio 3: Filtered temples page </h3>
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd131/filtered-temples.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/filtered-temples.html">
                             <img
                                 src="images/project-images/portfolio-3.webp"
                                 alt="Portfolio 3: "
@@ -138,15 +141,14 @@
                             This website portfolio uses filtering of array objects in JavaScript.
                         </p>
                     </div>
-                </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 4-->
-                        <h3 class="project-title">Portfolio 4: Unfiltered temples page
+                        <h3 class="project-title">Portfolio 4: Unfiltered temples page </h3>
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd131/temples.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/temples.html">
                             <img
                                 src="images/project-images/portfolio-4.webp"
                                 alt="Portfolio 4: "
@@ -160,15 +162,14 @@
                             This website portfolio is the beta version of the Filtered Temples page.
                         </p>
                     </div>
-                </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 5-->
-                        <h3 class="project-title">Portfolio 5: Holy grail layout (practice)
+                        <h3 class="project-title">Portfolio 5: Holy grail layout (practice) </h3>
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd131/csspractice/holy-grail-layout-flex.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/csspractice/holy-grail-layout-flex.html">
                             <img
                                 src="images/project-images/portfolio-5.webp"
                                 alt="Portfolio 5: "
@@ -182,15 +183,14 @@
                             This is only a practice website to create my first holy grail layout in HTML.
                         </p>
                     </div>
-                </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 6-->
-                        <h3 class="project-title">Portfolio 6: Whitewater rafting site (WDD130)
+                        <h3 class="project-title">Portfolio 6: Whitewater rafting site (WDD130) </h3>
                     </div>
                     <div class="picturediv">
-                        <a href="https://jamesphillipdeguzman.github.io/wdd130/wwr/index.html" target="_blank">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd130/wwr/index.html">
                             <img
                                 src="images/project-images/portfolio-6.webp"
                                 alt="Portfolio 6: "
@@ -204,7 +204,6 @@
                             This website portfolio is my project in Web Fundamentals (WDD130).
                         </p>
                     </div>
-                </h3>
             </div>
         </div>
     </div>
@@ -227,10 +226,10 @@
         </div>
 
         <div class="social-links">
-            <a href="https://www.facebook.com/diet.deguzman" target="_blank">
+            <a href="https://www.facebook.com/diet.deguzman">
                 <img src="images/svg/fb-logo.svg" alt="facebook logo" width="50" height="50">
             </a>
-            <a href="https://www.linkedin.com/in/jamesphillipdeguzman/" target="_blank">
+            <a href="https://www.linkedin.com/in/jamesphillipdeguzman/">
                 <img src="images/svg/linkedin-logo.svg" alt="LinkedIn logo" width="50" height="50">
             </a>
         </div>
