Final submission for project WDD131 - Website Porfolio

--- a/project/about.html
+++ b/project/about.html
@@ -25,10 +25,10 @@
 
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolios.html">Portfolios</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="about.html" id="about" class="active">About</a></li>
+            <li><a href="contact.html" id="contact">Contact</a></li>
+            <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
@@ -47,15 +47,19 @@
     <div class="hero">
         <div class="image-container">
             <h1 id="hero-pic">James De Guzman</h1>
-            <img src="images/project-images/james.webp" alt="Picture of: James Phillip De Guzman" width="300" height="200">
+            <img src="images/site-planning.svg" alt="Picture of: James Phillip De Guzman" width="300" height="200">
         </div>
 
     </div>
 
     <div class="bottom-section">
         <article class="my-profile">
-        <h2>Software Engineer </h2>
-        <p>I am a budding web developer who wants to create helpful websites and apps for my community. </p>
+        <h2> Future Software Engineer </h2>
+        <p>I am a budding web developer passionate about creating helpful websites and apps for my community. </p>
+        <p>I've spent quite a great deal of time just to learn the basics of web development. Many sleepless nights, actually.</p>
+        <p>Now, I've discovered for myself that in life, good things take time, and I believe that.</p>
+
+        <div class="mini-blog"></div>
         </article>
     </div>
 
