--- a/project/index.html
+++ b/project/index.html
@@ -25,10 +25,10 @@
 
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolios.html">Portfolios</a></li>
+            <li><a href="index.html" id="home" class="active">Home</a></li>
+            <li><a href="about.html" id="about">About</a></li>
+            <li><a href="contact.html" id="contact">Contact</a></li>
+            <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
@@ -46,16 +46,19 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1 id="hero-logo">besys.tech</h1>
-            <img src="images/besys-tech-logo.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+            <h1 id="hero-text">besys.tech</h1>
+            <img src="images/besys-tech-logo.svg" alt="besys tech company" width="200" height="100">
         </div>
 
     </div>
 
     <div class="bottom-section">
+        <div class="profile">
+            <img src="images/project-images/profile.png" alt="circle profile of besys tech" width="200" height="200">
+        </div>
         <article class="my-company">
         <h2>besys.tech</h2>
-        <p>Besys tech is the alternate name for James De Guzman's startup tech company, which  aims to create helpful websites and apps for my community. </p>
+        <p>I am a budding web developer and the founder of <span class="brand">besys tech</span>, a startup company focused on creating useful websites and apps for my community.</p>
         </article>
     </div>
 
@@ -72,8 +75,10 @@
             </a>
         </div>
 
+
         <div class="footer-text">
         &copy;<span id="currentyear"></span> James Phillip K. De Guzman <p class="lastmodified">Last Modified: <span id="lastModified"></span></p>
+        
         </div>
 
         <div class="social-links">
@@ -84,6 +89,7 @@
                 <img src="images/svg/linkedin-logo.svg" alt="LinkedIn logo" width="50" height="50">
             </a>
         </div>
+
 
     </div>
 </footer>
