--- a/project/contact.html
+++ b/project/contact.html
@@ -26,10 +26,10 @@
 
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolios.html">Portfolios</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="about.html" id="about">About</a></li>
+            <li><a href="contact.html" id="contact" class="active">Contact</a></li>
+            <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
@@ -54,23 +54,24 @@
     </div>
 
     <div class="bottom-section">
-        <h2>Enter your contact details</h2>
+        <div id="contact-details">
+            <h2>Contact James!</h2>
 
-        <form action="thanks.html" method="get" id="signup-form">
             <div class="contact-section">
-                <label for="fname">Name*<input type="text" id="fname" name="fname" required></label>
-                <label for="mobile">Mobile
-                    <input type="tel" id="mobile">
+                <label for="mobile">Mobile - 09090101783
+                    <img src="images/svg/mobile-logo.svg" alt="mobile number" width="50" height="50">
                 </label>
-                <label for="telephone">Telephone
-                    <input type="tel" id="telephone">
+                <label for="telephone">Tel. - 123456789
+                    <img src="images/svg/telephone-logo.svg" alt="mobile number" width="50" height="50">
                 </label>
-                <label for="email">Email*
-                    <input type="email" id="email" required>
+                <label for="email">Email - bessy1125@gmail.com
+                    <img src="images/svg/email-logo.svg" alt="mobile number" width="50" height="50">
                 </label>
-                <button id="submit">Sign me up</button>
+
             </div>
-        </form>
+
+        </div>
+
 
     </div>
 
