--- a/project/signup.html
+++ b/project/signup.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Site Plan: Mobile Layout</title>
-<meta name="description" content="Sample wireframe: mobile layout of my website">
+<title>Contact Page</title>
+<meta name="description" content="Contact page: Contact James De Guzman through mobile, phone and email">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,22 +18,23 @@
 
 
 <div class="page-wrap">
+
 <header>
+    <p id="window-size"></p>
 
     <nav class="navigation">
 
-        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="50" height="50"></div>
+        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
             <li><a href="index.html" id="home">Home</a></li>
             <li><a href="about.html" id="about">About</a></li>
             <li><a href="contact.html" id="contact">Contact</a></li>
             <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
 
-
         </ul>
         <button id="menu" aria-label="menu"></button>
     </nav>
-    <button class="signup-btn">Sign Up</button>
+    <button class="signup-btn">Sign up</button>
 
 
 
@@ -46,25 +47,31 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1>besys.tech</h1>
+            <h1>Be part of our growing community!</h1>
             <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
         </div>
 
     </div>
 
-    <div class="layout-section">
-        <h2>Mobile Layout</h2>
+    <div class="bottom-section">
+        <h2>Enter your contact details</h2>
 
-       <img src="images/svg/mobile-layout.svg" alt="picture of desktop layout for my website" width="400" height="400">
-       <div class="back">
-        <a href="siteplan.html" >Go back</a>
-       </div>
+        <form action="thanks.html" method="get" id="signup-form">
+            <div class="contact-section">
+                <label for="fname">Name<input type="text" id="fname" name="fname" required></label>
+                <label for="email">Email
+                    <input type="email" id="email" required>
+                </label>
+                <button id="submit">Sign me up</button>
+            </div>
+        </form>
 
     </div>
 
 </main>
 </div>
 <div class="wireframe-overlay"></div>
+
 
 <footer>
     <div class="footer-wrapper">
@@ -89,5 +96,6 @@
 
     </div>
 </footer>
+
 </body>
 </html>
