--- a/project/thanks.html
+++ b/project/thanks.html
@@ -25,10 +25,10 @@
 
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolios.html">Portfolios</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="about.html" id="about">About</a></li>
+            <li><a href="contact.html" id="contact">Contact</a></li>
+            <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
