form.html added

--- a/project/mobile-layout.html
+++ b/project/mobile-layout.html
@@ -28,6 +28,7 @@
             <li><a href="about.html" id="about">About</a></li>
             <li><a href="contact.html" id="contact">Contact</a></li>
             <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
+            <li><a href="../form.html" id="product">Products</a></li>
 
 
         </ul>
