--- a/form.html
+++ b/form.html
@@ -3,23 +3,163 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Product Review Form</title>
-<meta name="description" content="HTML form with a confirmation Page">
-<meta name="author" content="James Phillip K. De Guzman">
+<meta name="author" content="James Phillip De Guzman">
+<meta name="description" content="Product Review: A product review form using HTML forms">
+<title>Product Review</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="project/styles/base.css">
 <link rel="stylesheet" href="styles/form.css">
-<script src="scripts defer"></script>
+<link rel="stylesheet" href="project/styles/base-large.css">
+<script src="scripts/form.js" defer></script>
+<script src="project/scripts/base.js" defer></script>
 </head>
 <body>
-<header><h1>Product Review</h1></header>
+
+
+<div class="page-wrap">
+
+<header>
+
+    <nav class="navigation">
+
+        <div class="logo"><img src="project/images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
+        <ul>
+            <li><a href="project/index.html" id="home">Home</a></li>
+            <li><a href="project/about.html" id="about">About</a></li>
+            <li><a href="project/contact.html" id="contact">Contact</a></li>
+            <li><a href="project/portfolios.html" id="portfolio">Portfolios</a></li>
+            <li><a href="form.html" id="product" class="active">Products</a></li>
+
+        </ul>
+        <button id="menu" aria-label="menu"></button>
+    </nav>
+    <button class="signup-btn">Sign Up</button>
+
+
+
+
+</header>
+
+
 
 <main>
-    <form action="review.html" method="get">
 
-        <select name="" id=""></select>
+    <div class="hero">
+        <div class="image-container">
+            <h1 id="hero-text">besys.tech</h1>
+            <img src="project/images/besys-tech-logo.svg" alt="besys tech company" width="200" height="100">
+        </div>
+
+    </div>
+
+    <div class="bottom-section">
+        <div class="profile">
+            <img src="project/images/project-images/profile.png" alt="circle profile of besys tech" width="200" height="200">
+        </div>
+
+        <h2>besys.tech</h2>
+        <div class="form-section">
+          <h3>Sample Product Review Form</h3>
+          <fieldset class="form-group">
+            <form action="project/review.html" method="get" id="review-form">
+              <label for="dynamic-product">Product Name</label>
+
+              <!-- Dynamic select dropdown list -->
+              <select id="dynamic-product" name="dynamic-product" required>
+                <option value="" disabled selected>Select a product...</option>
+              </select>
+              <label for="stars">Overall Rating</label>
+
+              <!-- Radio star buttons -->
+              <div class="stars-rating" id="stars">
+                <input type="radio" id="fivestar" name="stars" value="5" required><label for="fivestar"></label>
+                <input type="radio" id="fourstar" name="stars" value="4" required><label for="fourstar"></label>
+                <input type="radio" id="threestar" name="stars" value="3" required><label for="threestar"></label>
+                <input type="radio" id="twostar" name="stars" value="2" required><label for="twostar"></label>
+                <input type="radio" id="onestar" name="stars" value="1" required><label for="onestar"></label>
+              </div>
+
+              <!-- Date Input -->
+              <div class="install-date">
+                <label for="install">Date of Installation</label>
+                <input type="date" id="date-installed" name="date-installed" required>
+
+              </div>
+
+              <!-- Checkboxes -->
+              <div class="features">
+
+                <p>Which features did you find useful in the product?</p>
+                <p id="italicize">(Check all that apply)</p>
+                <div class="wrap-checkbox">
+                  <label for="durability"><input type="checkbox" class="large-checkbox" id="durability" name="durability" value="durability">Durability</label>
+                  <label for="ease"><input type="checkbox" class="large-checkbox" id="ease" name="ease" value="ease">Ease of Use</label>
+                  <label for="performance"><input type="checkbox" class="large-checkbox" id="performance" name="performance" value="performance">Performance</label>
+                  <label for="design"><input type="checkbox" class="large-checkbox" id="design" name="design" value="design">Design</label>
+                </div>
+              </div>
+
+              <div class="review">
+
+                <label for="written">Written Review <span class="optional">(Optional)</span>
+                <!-- Text area for written review -->
+                <textarea id="written-review" name="written-review"></textarea></label>
+
+                <!-- Textbox for name -->
+                <label for="fname">Name <span class="optional">(Optional)</span><input type="text"  id="fname" name="fname"></label>
+              </div>
+
+              <input type="submit" id="review-btn" value="Post a Review">
+
+              <!-- Show/hide error message if not all mandatory fields have been entered
+              <p class="error-message" style="color: red;display: none;"></p> -->
+            </form>
+            </fieldset>
 
 
-    </form>
+        </div>
+
+    </div>
+
 </main>
-<footer>&copy; James Phillip K. De Guzman | <p class="lastmodified">Last Modified: <span id="lastModified"></span></p></footer>
+</div>
+<div class="wireframe-overlay"></div>
+
+
+<footer>
+    <div class="footer-wrapper">
+        <div class="footer-links">
+            <a href="project/siteplan.html">
+                <img src="project/images/svg/site-plan-logo.svg" alt="site plan logo" width="50" height="50">
+            </a>
+        </div>
+
+
+        <div class="footer-text">
+        &copy;<span id="currentyear"></span> James Phillip K. De Guzman <p class="lastmodified">Last Modified: <span id="lastModified"></span></p>
+
+    <!-- Show number of searches here and date-->
+            <p>Submission Count: <span id="submit-count"></span></p>
+            <!-- <p> Date: <span id="today"></span></p> -->
+        </div>
+
+        <div class="social-links">
+            <a href="https://www.facebook.com/diet.deguzman" target="_blank">
+                <img src="project/images/svg/fb-logo.svg" alt="facebook logo" width="50" height="50">
+            </a>
+            <a href="https://www.linkedin.com/in/jamesphillipdeguzman/" target="_blank">
+                <img src="project/images/svg/linkedin-logo.svg" alt="LinkedIn logo" width="50" height="50">
+            </a>
+        </div>
+
+
+    </div>
+</footer>
+
 </body>
 </html>
