--- a/project/about.html
+++ b/project/about.html
@@ -29,6 +29,7 @@
             <li><a href="about.html" id="about" class="active">About</a></li>
             <li><a href="contact.html" id="contact">Contact</a></li>
             <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
+            <li><a href="../form.html" id="product">Products</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
