--- a/project/index.html
+++ b/project/index.html
@@ -29,6 +29,7 @@
             <li><a href="about.html" id="about">About</a></li>
             <li><a href="contact.html" id="contact">Contact</a></li>
             <li><a href="portfolios.html" id="portfolio">Portfolios</a></li>
+            <li><a href="../form.html" id="product">Products</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
@@ -78,7 +79,7 @@
 
         <div class="footer-text">
         &copy;<span id="currentyear"></span> James Phillip K. De Guzman <p class="lastmodified">Last Modified: <span id="lastModified"></span></p>
-        
+
         </div>
 
         <div class="social-links">
