--- a/form.html
+++ b/form.html
@@ -66,7 +66,7 @@
         <div class="form-section">
           <h3>Sample Product Review Form</h3>
           <fieldset class="form-group">
-            <form action="project/review.html" method="get" id="review-form">
+            <form action="review.html" method="get" id="review-form">
               <label for="dynamic-product">Product Name</label>
 
               <!-- Dynamic select dropdown list -->
@@ -116,8 +116,6 @@
 
               <input type="submit" id="review-btn" value="Post a Review">
 
-              <!-- Show/hide error message if not all mandatory fields have been entered
-              <p class="error-message" style="color: red;display: none;"></p> -->
             </form>
             </fieldset>
 
