Fixed HTML validations

--- a/form.html
+++ b/form.html
@@ -86,7 +86,7 @@
 
               <!-- Date Input -->
               <div class="install-date">
-                <label for="install">Date of Installation</label>
+                <label for="date-installed">Date of Installation</label>
                 <input type="date" id="date-installed" name="date-installed" required>
 
               </div>
@@ -106,7 +106,7 @@
 
               <div class="review">
 
-                <label for="written">Written Review <span class="optional">(Optional)</span>
+                <label for="written-review">Written Review <span class="optional">(Optional)</span>
                 <!-- Text area for written review -->
                 <textarea id="written-review" name="written-review"></textarea></label>
 
