Tried to fix layout shifts in small device screens

--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="styles/form.css">
 <link rel="stylesheet" href="project/styles/base-large.css">
 <script src="scripts/form.js" defer></script>
-<script src="project/scripts/base.js" defer></script>
+<!-- <script src="project/scripts/base.js" defer></script> -->
 </head>
 <body>
 
@@ -70,9 +70,10 @@
               <label for="dynamic-product">Product Name</label>
 
               <!-- Dynamic select dropdown list -->
-              <select id="dynamic-product" name="dynamic-product" required>
+              <select class="dynamic-product" name="dynamic-product" required>
                 <option value="" disabled selected>Select a product...</option>
               </select>
+
               <label for="stars">Overall Rating</label>
 
               <!-- Radio star buttons -->
