--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="styles/form.css">
 <link rel="stylesheet" href="project/styles/base-large.css">
 <script src="scripts/form.js" defer></script>
-<!-- <script src="project/scripts/base.js" defer></script> -->
+<script src="project/scripts/base.js" defer></script>
 </head>
 <body>
 
