--- a/project/index.html
+++ b/project/index.html
@@ -94,6 +94,7 @@
 
     </div>
 </footer>
+<script type="text/javascript" async id="calories-burned-calculator" data-type="verywell-tool" data-vertical="verywellfit" src="https://www.verywellfit.com/static/5.99.0/components/tools/calculators/iframe-embed/embed.min.js?id=calories-burned-calculator"></script>
 
 </body>
 </html>
