added textarea to signup form and fixed margin-left between input and labels

--- a/project/signup.html
+++ b/project/signup.html
@@ -59,10 +59,9 @@
 
         <form action="thanks.html" method="get" id="signup-form">
             <div class="contact-section">
-                <label for="fname">Name<input type="text" id="fname" name="fname" required></label>
-                <label for="email">Email
-                    <input type="email" id="email" required>
-                </label>
+                <label for="fname" class="name-label">Name<input type="text" id="fname" name="fname" required></label>
+                <label for="email" class="email-label">Email<input type="email" id="email" required></label>
+                <label for="message" class="message"><textarea name="message" id="message" placeholder="type your message here..."></textarea></label>
                 <button id="submit">Sign me up</button>
             </div>
         </form>
