Added resume.html as a link to WDD 131 - Dynamic Web Fundamentals - Home Page and also other resources

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="James Phillip De Guzman">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="James Phillip De Guzman" />
     <meta
       name="description"
       content="WDD 131 - Dynamic Web Fundamentals | James Phillip De Guzman | My Home Page"
-    >
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/resume.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap"
       rel="stylesheet"
-    >
+    />
 
     <title>WDD 131 - Dynamic Web Fundamentals - James Phillip De Guzman</title>
     <script src="scripts/getdates.js" defer></script>
@@ -50,12 +51,12 @@
       </header>
       <main class="grid-container">
         <section class="card1">
-          <h2 >About Me</h2>
+          <h2><a href="resume.html" target="_blank">About Me</a></h2>
           <article class="about-me">
             <img
               src="images/James.jpg"
               alt="Photo of James Phillip De Guzman"
-            >
+            />
             <h3>James Phillip De Guzman</h3>
             <p>
               I am an aspiring web developer who loves to learn about html, css
@@ -66,7 +67,7 @@
           </article>
 
           <article class="about-my-hobby">
-            <img src="images/violin.png" alt="Photo of the Philippine's Flag" >
+            <img src="images/violin.png" alt="Photo of the Philippine's Flag" />
             <h3>My Hobby</h3>
             <p>
               I am also an adult beginner violinist who loves to practice during
@@ -78,7 +79,7 @@
             <img
               src="images/philippines.png"
               alt="Photo of the Philippine's Flag"
-            >
+            />
             <h3>Where I live</h3>
             <p>
               The Philippines, an archipelago in Southeast Asia, is culturally
@@ -101,24 +102,24 @@
                   >Course Content Home
                 </a>
               </li>
-              <!-- <li>
+              <li>
                 <a href="https://www.w3schools.com/html/default.asp"
                   >HTML Tutorial</a
                 >
-              </li> -->
+              </li>
 
               <li>
                 <a href="https://www.w3schools.com/css/default.asp"
                   >CSS Tutorial</a
                 >
               </li>
-              <!-- <li>
+              <li>
                 <a href="https://www.w3schools.com/js/default.asp"
                   >JavaScript Tutorial</a
                 >
-              </li> -->
+              </li>
               <li><a href="https://coolors.co/">Coolors</a></li>
-              <!-- <li>
+              <li>
                 <a href="https://validator.w3.org/"
                   >W3C Markup Validation Service</a
                 >
@@ -132,7 +133,7 @@
                 <a href="https://code.visualstudio.com/download"
                   >Download Visual Code Studio</a
                 >
-              </li> -->
+              </li>
             </ul>
           </nav>
         </section>
