--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 
     <!-- Left Section - sidebar -->
     <section class="sidebar">
-        <img src="images/images_resume/James.jpg" alt="profile picture" width="370px" />
+        <img src="images/James2.jpeg" alt="profile picture" width="370px" />
 
         <div class="content">
             <!-- Contacts Information Section-->
@@ -104,6 +104,18 @@
         <div class="projects">
             <h3>Projects</h3>
             <ol>
+                <li><a href="https://jamesdeguzman.com/" target="_blank"> https://jamesdeguzman.com/
+                    </a>
+
+                    <img src="images/images_resume/dashed_line_3.svg" alt="dashed-line">
+                    <span>
+                        [
+                    </span>
+                    HTML5, CSS3, JavaScript
+                    <span>
+                        ]
+                    </span>
+                </li>
                 <li><a href="https://mybessy.wordpress.com/" target="_blank"> https://mybessy.wordpress.com/
                     </a>
 
