Updated my resume by adding DM post for Data Analyst in WNS.

--- a/resume.html
+++ b/resume.html
@@ -151,10 +151,26 @@
         <div class="work-experience">
             <h3>Work Experience</h3>
 
+
             <!-- 1st work experience  -->
             <div class="experience">
+                <h4>Data Analyst<span class="subtitle"> Deputy Manager</span></h4>
+                <p>Jan 2024 - Present (9 mos)| WNS Global Solutions • Mandurriao, loilo</p>
+                <ul>
+                    <li>I am currently part of a new automation project for Outbound dialler extracts that will help
+                        reduce outages by 90%.
+                    </li>
+                    <li>Created 16 apps and 14 flows using Power Apps and Power Automate which helped boost agent and
+                        operation's productivity by 60-70%</li>
+                    <li>Created dashboards and reports in association to the apps I've created.</li>
+
+                </ul>
+            </div>
+
+            <!-- 2nd work experience  -->
+            <div class="experience">
                 <h4>Data Analyst<span class="subtitle"> Assistant Manager</span></h4>
-                <p>Jan 2022 - Present (1 yr 7 mos)| WNS Global Solutions • Mandurriao, loilo</p>
+                <p>Jan 2022 - Dec 2023 (2 yrs)| WNS Global Solutions • Mandurriao, loilo</p>
                 <ul>
                     <li>Manages and automates Outbound daily extracts for the team which increase productivity by 50%.
                     </li>
@@ -166,7 +182,7 @@
                 </ul>
             </div>
 
-            <!-- 2nd work experience  -->
+            <!-- 3rd work experience  -->
             <div class="experience">
                 <h4>Associate <span class="subtitle">Team Lead</span></h4>
                 <p>Feb 2020 - Jan 2022 (2 yrs) | WNS Global Solutions • Mandurriao, loilo</p>
@@ -181,7 +197,7 @@
                 </ul>
             </div>
 
-            <!-- 3rd work experience  -->
+            <!-- 4th work experience  -->
             <div class="experience">
                 <h4>Quality <span class="subtitle">Analyst</span></h4>
                 <p> Aug 2016 - Feb 2020 (3 yrs 7 mos) | WNS Global Solutions • Mandurriao, loilo</p>
@@ -197,7 +213,7 @@
                 </ul>
             </div>
 
-            <!-- 4th work experience  -->
+            <!-- 5th work experience  -->
             <div class="experience">
                 <h4>Senior Operations <span class="subtitle">Associate</span></h4>
                 <p> Aug 2013 - Jul 2016 (3 yrs) | WNS Global Solutions • Mandurriao, loilo</p>
